<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="accept_location">Save Location</string>
    <string name="accuracy">Accuracy</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="action_create_survey">Add new survey</string>
    <string name="pref_url">URL</string>
    <string name="pref_source_url">Source URL</string>
    <string name="pref_upload_url">Upload URL</string>
    <string name="add_another">Add Group</string>
    <string name="add_another_repeat">Add another \"%s\" group?</string>
    <string name="add_more">Add more</string>
    <string name="add_repeat">Add a new \"%s\" group?</string>
    <string name="add_repeat_no">Do Not Add</string>
    <string name="advance">forward to\nnext\nprompt</string>
    <string name="altitude">Altitude</string>
    <string name="audio_file_error">No audio file was specified.</string>
    <string name="audio_file_invalid">File: %s is not a valid audio file.</string>
    <string name="backup">backward to\nprevious\nprompt</string>
    <string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_loading_form">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as complete. It may be encrypted.</string>
    <string name="capture_audio">Record Sound</string>
    <string name="capture_image">Take Picture</string>
    <string name="capture_osm">Launch OpenMapKit</string>
    <string name="recapture_osm">Redo OSM Tagging</string>
    <string name="capture_video">Record Video</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">ODK Password</string>
    <string name="change_protocol_settings_default">Platform Settings</string>
    <string name="change_username">ODK Username</string>
    <string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
    <string name="clear_answer">Remove response</string>
    <string name="clear_answer_ask">Remove This Response?</string>
    <string name="clear_answer_no">Cancel</string>
    <string name="completed_data">Complete (%s)</string>
    <string name="data">Saved Forms</string>
    <string name="data_saved_error">Sorry, form save failed!</string>
    <string name="data_saved_ok">Form successfully saved!</string>
    <string name="save_point_error">Error saving recovery point: %s</string>
    <string name="default_completed">Default to finalized</string>
    <string name="default_completed_summary">Mark form as finalized by default</string>
    <string name="delete_confirm">Delete %s form(s)?</string>
    <string name="delete_file">Delete Selected</string>
    <string name="delete_no">Do Not Delete</string>
    <string name="delete_repeat">Remove group</string>
    <string name="delete_repeat_ask">Remove This Group?</string>
    <string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
    <string name="delete_repeat_no">Cancel</string>
    <string name="delete_yes">Delete Forms</string>
    <string name="discard_answer">Remove response</string>
    <string name="discard_group">Remove group</string>
    <string name="download">Get Selected</string>
    <string name="download_forms_result">Download Result</string>
    <string name="downloading_data">Connecting to Server</string>
    <string name="do_not_change">Cancel</string>
    <string name="do_not_exit">Cancel</string>
    <string name="do_not_save">Ignore Changes</string>
    <string name="entering_repeat">Add Group</string>
    <string name="entering_repeat_ask">Add New Group?</string>
    <string name="enter_data">Fill Blank Form</string>
    <string name="enter_data_button">Fill Blank Form</string>
    <string name="error_occured">Error Occurred</string>
    <string name="error_attaching_binary_file">An error occurred while attaching the media: %s</string>
    <string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
    <string name="file_deleted_ok">%s form(s) successfully deleted!</string>
    <string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
    <string name="file_invalid">File: %s is invalid.</string>
    <string name="file_missing">File: %s is missing.</string>
    <string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
    <string name="forms">Blank Forms</string>
    <string name="getting_location">Loading Location</string>
    <string name="get_barcode">Get Barcode</string>
    <string name="get_forms">Get Blank Form</string>
    <string name="get_location">Record Location</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="jump_to_beginning">Go To Start</string>
    <string name="jump_to_end">Go To End</string>
    <string name="jump_to_previous">Go Up</string>
    <string name="latitude">Latitude</string>
    <string name="leave_repeat_yes">Do Not Add</string>
    <string name="leaving_repeat_ask">Add One More Group?</string>
    <string name="list_failed_with_error">Form listing failed. %s.</string>
    <string name="loading_form">Loading Form</string>
    <string name="load_remote_form_error">Error Getting Form List</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
    <string name="location_accuracy">Accuracy is %1$s m</string>
    <string name="longitude">Longitude</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu_details">Data collection made easier…</string>
    <string name="manage_files">Delete Saved Form</string>
    <string name="mark_finished">Mark form as finalized</string>
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="parse_error">Sorry, unable to parse form.</string>
    <string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
    <string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
    <string name="password">Password</string>
    <string name="play_audio">Play Sound</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="quit_application">Exit %s</string>
    <string name="quit_entry">Save Form and Exit</string>
    <string name="refresh">Refresh</string>
    <string name="replace_barcode">Replace Barcode</string>
    <string name="replace_location">Replace Location</string>
    <string name="required_answer_error">%1$s is required!</string>
    <string name="review_data">Edit Saved Form</string>
    <string name="review_data_button">Edit Saved Form (%s)</string>
    <string name="saved_data">Incomplete (%s)</string>
    <string name="server_url">URL</string>
    <string name="server_preferences">Server Settings</string>
    <string name="survey_settings">Survey settings</string>
    <string name="survey_chosen_type">Survey type</string>
    <string name="survey_default_type">za20160210</string>
    <string name="hint_date"><small><i> dd-MM-yyyy </i></small></string>
    <string name="farmer_block_name">Block</string>
    <string name="farmer_vet_camp_name">Vet camp name</string>
    <string name="farmer_agr_camp_name">Agriculture camp name</string>
    <string name="farmer_village_name">Village/locality name</string>
    <string name="farmer_activities_title">Was the household engaged in any of the following activities in current season?</string>
    <string name="farmer_crop_production">Crop production(field crops, fruits, sugarcane or vegetables)</string>
    <string name="farmer_livestock_production">Livestock production</string>
    <string name="farmer_fishing_production">Fish farming</string>
    <string name="farmer_manager_name">Name of manager</string>
    <string name="farmer_operating_officer_name">Name of chief operating officer</string>
    <string name="farmer_date_of_birth">Date of birth</string>
    <string name="farmer_place_of_birth">Place of birth</string>
    <string name="farmer_passport_number">National identity card or passport number/separate into two sections</string>
    <string name="farmer_date_of_issue_passport">Date of issue of the CNI (or passport)</string>
    <string name="farmer_gender">Gender</string>
    <string name="farmer_marital_status">Marital status</string>
    <string name="farmer_nationality">Nationality</string>
    <string name="farmer_activities">The following activities have been carried out in the operation during the campaign 2014/2015</string>
    <string name="farmer_main_source_of_livelihood">What is your main source of livelihood?</string>
    <string name="farmer_total_number_of_plots">What is the total number of plots on the farm?</string>
    <string name="farmer_total_area_of_holding">What is the total area of the holding (in hectare)?</string>
    <string name="farmer_total_area_of_holding_unit">Unit of measure of the total area of the holding</string>
    <string name="farmer_cultivable_area">What is the cultivable area?</string>
    <string name="farmer_cultivable_area_unit">Unit of measure of cultivable area</string>
    <string name="farmer_harvested_area">What is the area harvested?</string>
    <string name="farmer_harvested_area_unit">Unit of measure of area harvested</string>
    <string name="farmer_exploited_reasons">If the total area has not been exploited, what are the reasons</string>
    <string name="farmer_exploited_other_reasons">Other reason</string>
    <string name="farmer_credit_title">Agricultural services</string>
    <string name="farmer_has_credit">Did you get a credit?</string>
    <string name="farmer_credit_type">What is the type of credit obtained?</string>
    <string name="farmer_credit_amount">Amount last credit(in thousands FCFA)</string>
    <string name="farmer_credit_source">Source of the last credit</string>
    <string name="farmer_credit_completion_date">Date of completion of the last credit</string>
    <string name="farmer_credit_repayment_first_year">First year of repayment of the last loan</string>
    <string name="farmer_credit_repayment_last_year">Last year of the last credit repayment</string>
    <string name="farmer_credit_destination">Destination of credit obtained</string>
    <string name="tunisia_seed_date">When did you plant this crop?</string>
    <string name="tunisia_seed_used">Did you purchase the seeds being used for the crop in this field?</string>
    <string name="tunisia_seed_name">What is the name of the purchased seed?</string>
    <string name="tunisia_seed_cost">Cost of seed purchase (in Kwacha)</string>
    <string name="senegal_crop_attack_type">Give frequent attacks</string>
    <string name="senegal_crop_attack_date">Generally what month you have for each speculative attacks?</string>
</resources>