<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/managerNameTitle"
            android:text="@string/farmer_manager_name"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/managerNameText"
            android:inputType="text" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/operatingOfficerNameTitle"
            android:text="@string/farmer_operating_officer_name"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/operatingOfficerNameText"
            android:inputType="text" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/dateOfBirthTitle"
            android:text="@string/farmer_date_of_birth"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/dateOfBirthText"
            android:hint="@string/hint_date"
            android:inputType="date" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/placeOfBirthTitle"
            android:text="@string/farmer_place_of_birth"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/placeOfBirthText"
            android:inputType="text" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/passportNumberTitle"
            android:text="@string/farmer_passport_number"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/passportNumberText"
            android:inputType="text" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/dateOfIssueTitle"
            android:text="@string/farmer_date_of_issue_passport"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/dateOfIssueText"
            android:hint="@string/hint_date"
            android:inputType="date" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/genderTitle"
            android:text="@string/farmer_gender"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/genderGroup"
            android:orientation="horizontal"/>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/maritalStatusTitle"
            android:text="@string/farmer_marital_status"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                style="@style/RadioGroupTheme"
                android:id="@+id/maritalStatusGroup1"/>

            <RadioGroup
                style="@style/RadioGroupTheme"
                android:id="@+id/maritalStatusGroup2"/>

        </LinearLayout>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/nationalityTitle"
            android:text="@string/farmer_nationality"/>

        <Spinner
            style="@style/AppTheme.SpinnerTheme"
            android:id="@+id/nationalitySpinner" />

    </LinearLayout>

</ScrollView>