<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/activitiesTitle"
            android:text="@string/farmer_activities"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/activitiesGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"/>

            <LinearLayout
                android:id="@+id/activitiesGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"/>

        </LinearLayout>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/livelihoodSourceTitle"
            android:text="@string/farmer_main_source_of_livelihood"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/livelihoodSourceGroup"
            android:orientation="horizontal"/>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/numberPlotsTitle"
            android:text="@string/farmer_total_number_of_plots"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/numberPlotsText"
            android:inputType="number" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/holdingAreaTitle"
            android:text="@string/farmer_total_area_of_holding"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/holdingAreaText"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/unitHoldingTitle"
            android:text="@string/farmer_total_area_of_holding_unit"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/unitHoldingGroup"
            android:orientation="horizontal"/>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/cultivableAreaTitle"
            android:text="@string/farmer_cultivable_area"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/cultivableAreaText"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/unitCultivableAreaTitle"
            android:text="@string/farmer_cultivable_area_unit"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/unitCultivableAreaGroup"
            android:orientation="horizontal"/>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/harvestedAreaTitle"
            android:text="@string/farmer_harvested_area"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/harvestedAreaText"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/unitHarvestedAreaTitle"
            android:text="@string/farmer_harvested_area_unit"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/unitHarvestedAreaGroup"
            android:orientation="horizontal"/>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/exploitedReasonsTitle"
            android:text="@string/farmer_exploited_reasons"/>

        <LinearLayout
            android:id="@+id/exploitedReasonsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"/>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/otherReasonsTitle"
            android:text="@string/farmer_exploited_other_reasons"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/otherReasonsText"
            android:inputType="text" />

    </LinearLayout>
</ScrollView>