<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/farmerActivitiesInfo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TitleTheme"
            android:text="@string/farmer_activities_title"/>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/cropTitle"
            android:text="@string/farmer_crop_production"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/cropGroup"
            android:orientation="horizontal" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/livestockTitle"
            android:text="@string/farmer_livestock_production"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/livestockGroup"
            android:orientation="horizontal" />

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/fishingTitle"
            android:text="@string/farmer_fishing_production"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/fishingGroup"
            android:orientation="horizontal" />

    </LinearLayout>
</ScrollView>