<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/attackTypeTitle"
            android:text="@string/senegal_crop_attack_type"/>

        <RadioGroup
            style="@style/RadioGroupTheme"
            android:id="@+id/attackTypeGroup"
            android:orientation="vertical"/>

        <TextView
            style="@style/SubtitleTheme"
            android:id="@+id/attackDateTitle"
            android:text="@string/senegal_crop_attack_date"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <EditText
            style="@style/EditTextTheme"
            android:id="@+id/attackDateText"
            android:hint="@string/hint_date"
            android:inputType="date" />

    </LinearLayout>
</ScrollView>